# qfinzero

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start-frontend.sh
analytics/: bsm_and_IVsurface.py  earning_date.json  interest_rate_2025.json  interest_rate_2025.py  option_data.py  stock_price_2025.py  stock_prices.json
clients/: README.md  __init__.py
clients/esp/: __init__.py  client.py
clients/npp/: __init__.py  client.py
clients/pmb/: __init__.py  client.py
clients/upq/: __init__.py  client.py
config/: qfinzero.env
demos/: README.md
demos/esp/: earnings_calendar.py  econ_calendar.py  news_search.py  trigger_check.py  upcoming_events.py
demos/mcp/: market_data.py  news_events.py  trading_session.py
demos/npp/: earnings_calendar.py  econ_calendar.py  news_search.py  trigger_check.py  upcoming_events.py
demos/pmb/: README.md  result_saver.py
demos/upq/: README.md  option_query.py  rates_query.py  stock_query.py
docs/: MOCK.md  data-platform-requirements.md
docs/cn/: MOCK.md  README.md  data-platform-requirements.md
docs/conventions/: timezone.md
docs/en/: MOCK.md  data-platform-requirements.md
docs/esp/: README.md  openapi.yaml
docs/ffo/: README.md  openapi.yaml
docs/npp/: README.md  openapi.yaml
docs/plans/: 2026-02-18-data-platform-backend-design.md  2026-02-18-data-platform-backend-impl.md  2026-02-19-data-platform-frontend-monitoring-impl.md  2026-02-22-playground-design.md  2026-02-22-playground-impl.md  2026-02-24-news-data-pipeline-design.md  2026-02-24-news-data-pipeline.md  2026-02-28-upq-realtime-greeks-plan.md  2026-03-01-option-chain-expiry-fallback-plan.md  2026-03-01-upq-greeks-test-expansion-plan.md  2026-03-02-dividend-adjusted-greeks-design.md  2026-03-02-dividend-adjusted-greeks-impl.md  2026-03-03-option-tools-audit.md  2026-03-03-pmb-execution-bugs.md  2026-03-03-tools-unit-tests-design.md  2026-03-03-tools-unit-tests-impl.md  2026-03-06-pmb-option-lifecycle-design.md  2026-03-06-pmb-option-lifecycle-impl.md  2026-03-08-overlay-strategy-backtest-design.md  2026-03-08-overlay-strategy-backtest-impl.md  2026-03-09-fill-price-analysis.md  2026-03-09-overlay-backtest-results.md  2026-03-09-phase2-enhancements.md  2026-03-09-upq-technical-indicators-impl.md  2026-03-10-daily-fill-price-bias-fix.md  2026-03-10-llm-context-enrichment.md  2026-03-10-overlay-demo-paper-alignment.md  2026-06-29-assay-console-and-update-orchestration-design.md  2026-06-29-unified-data-pipeline-design.md  2026-07-04-unified-server-design.md
docs/pmb/: README.md  agent-guide.md  openapi.yaml
docs/upq/: README.md  agent-guide.md  openapi.yaml
documents/: option_rest.md
earning_benchmark/: earncase_AMD.csv  earncase_AMD.json  earncase_PLTR.csv  earncase_PLTR.json  earncase_retrieval.py
eval/: models.yaml  run_eval.py
eval/calling/: __init__.py  benchmark.jsonl  metrics.py  models.yaml  protocol.md  runner.py  schema.py  tables.md
eval/planning/: README.md  config.yaml  models.yaml
ffo/: FACTOR_COMBINATION_API_DOCUMENTATION.md
ffo/api/: factor_eval_api.py  factor_eval_client.py  utils.py
ffo/samples/: test_dynamic_sample.json
ffo/webui/: app.py
infra/cache_data/: factor_cache.db
infra/dashboard/: config.py  main.py
infra/dashboard-web/: .env.example  .env.local  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
infra/data-admin/: jobs.py  main.py  requirements.txt
infra/esp/: config.py  main.py  requirements.txt
infra/ffo/: README.md  README_API.md  README_DESIGN.md  backend_app.py  start.sh  web_app.py
infra/npp/: config.py  economic_events.py  fomc_scraper.py  main.py  massive_client.py  massive_news.py  models.py  nasdaq_earnings.py  requirements.txt  stockbench_news.py
infra/oql/: README.md  engine.py  (+2 more)
infra/upq/: .env.example  .gitignore  Cargo.toml  README.md
infra/upq/crates/upq-bench/: Cargo.toml
infra/upq/crates/upq-bench/src/: main.rs  stats.rs
infra/upq/crates/upq-core/: Cargo.toml
infra/upq/crates/upq-core/src/: error.rs  lib.rs  opra.rs  rates.rs  sql_builder.rs  validation.rs
infra/upq/crates/upq-core/tests/: opra_tests.rs  rates_tests.rs  sql_builder_tests.rs  validation_tests.rs
infra/upq/crates/upq-ingest/: Cargo.toml
infra/upq/crates/upq-ingest/src/: cli.rs  compact.rs  ingest.rs  lib.rs  main.rs  manifest.rs  sample_sync.rs  sync_plan.rs  sync_remote.rs
infra/upq/crates/upq-ingest/tests/: cli_tests.rs  compact_tests.rs  ingest_tests.rs  manifest_tests.rs  sample_sync_tests.rs  sync_plan_tests.rs
infra/upq/crates/upq-service/: Cargo.toml  build.rs
infra/upq/crates/upq-service/src/: app.rs  corporate_actions.rs  dividends.rs  greeks.rs  indicators.rs  lib.rs  main.rs  rates_curve.rs  splits.rs
infra/upq/crates/upq-service/tests/: api_contract_tests.rs  dividends_tests.rs  greeks_math_tests.rs  indicators_tests.rs  rates_curve_tests.rs  splits_tests.rs
infra/upq/docs/: api-usage.md  openapi.yaml  schemas.md
infra/upq/docs/plans/: 2026-02-09-upq-design.md  2026-02-09-upq-implementation-plan.md
infra/upq/docs/testing/: benchmark-report.md  greeks-validation-report.md  server-readonly-validation.md  test-matrix.md  test-strategy.md
infra/upq/scripts/: sync_from_qlib.sh  validate_server_readonly.sh
infra/upq/storage/: splits.json
infra/upq/tests/: smoke_greeks_api.py  verify_greeks_api.py
mcp/: README.md  requirements.txt  server.py
polygon.io/: collect_stock.ipynb
qfinzero/: __init__.py  config.py  env.py  metrics.py  runtime.py
scripts/: .apifox_project  README.md  analyze_gaps.py  apifox_import.py  install-service.sh  news_data.sh  restart.sh  run_all.sh  serve.sh  status.sh  stop_all.sh  test-env.sh  upq_flatfiles.sh
tests/: conftest.py  test_data_admin.py  test_esp_client.py  test_mcp_tools.py  test_npp_client.py  test_pipeline.py  test_pmb_client.py  test_pmb_execution.py  test_pure_utils.py  test_runtime_ports_and_version.py  test_smoke_greeks_api.py  test_update_orchestration.py  test_upq_client.py
(+394 files in other folders)
