[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qfinzero"
version = "0.1.0"
description = "QFinZero — quantitative finance toolkit"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[tool.setuptools]
packages = [
    "qfinzero",
    "qfinzero.clients",
    "qfinzero.clients.pmb",
    "qfinzero.clients.upq",
    "qfinzero.clients.esp",
]

[tool.setuptools.package-dir]
"qfinzero" = "qfinzero"
"qfinzero.clients" = "clients"
"qfinzero.clients.pmb" = "clients/pmb"
"qfinzero.clients.upq" = "clients/upq"
"qfinzero.clients.esp" = "clients/esp"
