[package]
name = "upq-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
duckdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.5", features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
upq-core = { path = "../upq-core" }

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

[lints]
workspace = true
